SplashActivity에서 데이터 받아와 MainActivity로 보내기 MainActivity에서는 MyViewModel에 저장

--- a/K_league_info/app/src/main/res/layout/activity_post_write.xml
+++ b/K_league_info/app/src/main/res/layout/activity_post_write.xml
@@ -63,11 +63,33 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/layout_community"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/passwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@color/colorPrimary"
+                android:ems="10"
+                android:hint="패스워드를 입력하세요.(15자 제한)"
+                android:maxLength="15"
+                android:inputType="textPersonName"
+                android:textColor="#FFFFFF"
+                android:textColorHint="#FFFFFF"
+                android:textSize="24sp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="100dp"
+            android:layout_marginBottom="150dp"
             android:background="@drawable/layout_community"
             android:orientation="vertical">
 
