--- a/K_league_info/app/src/main/res/layout/item_communityboard.xml
+++ b/K_league_info/app/src/main/res/layout/item_communityboard.xml
@@ -31,14 +31,51 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/content"
+        <LinearLayout
+            android:id="@+id/view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="내용"
-            android:textSize="18sp"
-            android:visibility="gone" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#DCDCDC"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/passwd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="9"
+                    android:background="@null"
+                    android:ems="10"
+                    android:hint="패스워드를 입력하시오."
+                    android:inputType="textPersonName"
+                    android:padding="10dp"
+                    android:textSize="15sp" />
+
+                <ImageButton
+                    android:id="@+id/delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/colorPrimary"
+                    card_view:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="내용"
+                android:textSize="18sp"
+                android:visibility="visible" />
+
+        </LinearLayout>
 
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
