--- a/K_league_info/app/src/main/res/layout/activity_splash.xml
+++ b/K_league_info/app/src/main/res/layout/activity_splash.xml
@@ -4,10 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/loading"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/splash_imageView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="Loading..."
+        android:textSize="18sp" />
+
     <ImageView
         android:id="@+id/splash_imageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_centerInParent="true"
         app:srcCompat="@drawable/k_league_icon" />
+
 </RelativeLayout>
