--- a/K_league_info/app/src/main/res/layout/activity_teamdetail.xml
+++ b/K_league_info/app/src/main/res/layout/activity_teamdetail.xml
@@ -44,18 +44,18 @@
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/teamdescLinearlayout">
 
-            <TextView
-                android:id="@+id/staff_teamdetail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:text="감독 및 코치" />
+<!--            <TextView-->
+<!--                android:id="@+id/staff_teamdetail"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:padding="5dp"-->
+<!--                android:text="감독 및 코치" />-->
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/staff_recyclerview"
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:orientation="horizontal" />
+<!--            <androidx.recyclerview.widget.RecyclerView-->
+<!--                android:id="@+id/staff_recyclerview"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="120dp"-->
+<!--                android:orientation="horizontal" />-->
 
             <TextView
                 android:id="@+id/fw_teamdetail"
