--- a/K_league_info/app/src/main/res/layout/activity_teamdetail.xml
+++ b/K_league_info/app/src/main/res/layout/activity_teamdetail.xml
@@ -67,7 +67,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/fw_recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal" />
 
             <TextView
@@ -80,7 +80,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/mf_recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal" />
 
             <TextView
@@ -93,7 +93,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/df_recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal" />
 
             <TextView
@@ -106,7 +106,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/gk_recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal" />
         </LinearLayout>
     </ScrollView>
