scoredetail 페이지 사진 크기 및 사진 안나오던거 수정 & teamdetail 페이지에서 팀 로고 클릭시 자세한 정보 나오도록 기능 추가 & playerdetail 페이지또한 선수 이미지 클릭시 자세한 정보 나오도록 기능 추가

--- a/K_league_info/app/src/main/res/layout/activity_player.xml
+++ b/K_league_info/app/src/main/res/layout/activity_player.xml
@@ -18,11 +18,13 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                <ImageView
+                <ImageButton
                     android:id="@+id/playerImg"
                     android:layout_width="match_parent"
                     android:layout_height="288dp"
                     android:layout_weight="1"
+                    android:scaleType="fitCenter"
+                    android:background="#ffffff"
                     app:srcCompat="@drawable/gk_lee" />
 
             </LinearLayout>
