--- a/K_league_info/app/src/main/res/layout/item_goal.xml
+++ b/K_league_info/app/src/main/res/layout/item_goal.xml
@@ -56,12 +56,13 @@
 
             <ImageView
                 android:id="@+id/player_face"
-                android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
-                android:maxWidth="150dp"
-                android:maxHeight="150dp"
+                android:maxWidth="50dp"
+                android:maxHeight="50dp"
                 android:src="@drawable/ic_launcher_foreground" />
 
         </LinearLayout>
